[package]
name = "cube_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
websockets = "0.3.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0" 
base64 = "0.22.1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
